--- a/style.css
+++ b/style.css
@@ -52,3 +52,9 @@ body{
     background-image: url(ship-generic.png);
     background-size: cover;
 }
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    body {
+      background: #999;
+      width: 100%;
+    }
+  }
